--- a/Slak/06.md
+++ b/Slak/06.md
@@ -536,6 +536,123 @@ To the demons and their relations to the gods and to men we therefore next come.
 
  [^206:3]: _De defectu oraculorum_, 13.
 
+# Chapter VI 
+
+## Plutarch's essays 
+  
+
+### Themes of ensuing chapters
+
+Having noted the presence of magic in works so especially devoted to natural science as those of Pliny, Galen, and Ptolemy, we have now to illustrate the prominence both of natural science and of magic in the life and thought of the Roman Empire by a consideration of some writers of a more miscellaneous character, who should reflect for us something of the interests of the average cultured reader of that time. Of this type are Plutarch, Apuleius and Philostratus, whom we shall consider in the coming chapters in the order named, which also roughly corresponds to their chronological sequence. 
+
+### Life of Plutarch 
+
+Plutarch flourished during the reigns of Trajan and Hadrian at the turn of the first and second centuries, but _The Letter on the Education of a Prince to Trajan_  [^200:1] probably is not by him, and the legend that Hadrian was his pupil is a medieval invention. 
+
+  [^200:1]: De institutione principis epistola ad Traianum, a treatise extant only in Latin form. 
+
+He was born in Boeotia about 46-48 A. D. and was educated in rhetoric and philosophy, science and mathematics, at Athens, where he was a student when Nero visited Greece in 66 A. D. He also made several visits to Rome and resided there for some time. He held various public positions in the province of Achaea and in his small native town of Chaeronea, and had official connections with the Delphic oracle and amphictyony. Artemidorus in the _Oneirocriticon_ states that Plutarch's death was foreshadowed in a dream. [^201:1] 
+
+  [^201:1]:  IV, 72. On the biography and bibliography of Plutarch consult Christ, _Gesch. d. Griechischen Litteratur_, 5th ed., Munich, 1913, II, 2, "Die nachklassische Periode," pp. 367ff. 
+
+### Superstition in Plutarch's Lives 
+
+With Plutarch's celebrated _Lives of Illustrious Men_, as with narrative histories in general, we shall not be much concerned, although they of course abound in omens and portents, in bits of pseudo-science which details in his narrative bring to the mind of the biographer, and in cases of divination and magic. Thus theories are advanced to explain why birds dropped dead from mid-air at the shout set up by the Greeks at the Isthmian games when Flamininus proclaimed their freedom. Or we are told how Sulla received from the Chaldeans predictions of his future greatness, how in the dedication to his Memoirs he admonished Lucullus to trust in dreams, and how Lucullus's mind was deranged by a love philter administered by his freedman in the hope of increasing his master's affection towards him. [^201:2]  Such allusions and incidents abound also of course in Dio Cassius, Tacitus, and other Roman historians. 
+
+ [^201:2]:  See also the essay, "Whether an old man should engage in politics," cap. 16. 
+ 
+### His Morals or Essays.  
+
+But we shall be concerned rather with Plutarch's other His writings, which are usually grouped together under the title of _Morals_, or, more appropriately, _Miscellanies and Essays_. Not only is there great variety in their titles, but in any given essay the attention is usually not strictly held to one theme or problem but the discussion diverges to other points. Some are by their very titles and form rambling dialogues, symposiacs, and table-talk, where the conversation lightly flits from one topic to other entirely different ones, never dwelling for long upon any one point and never returning to its starting-point. This dinner-table and drinking-bout type of cultured and semi-learned discourse has other extant ancient examples such as the _Attic Nights_ of Aulus Gellius and the _Deipnosophists_ of Athenaeus, but Plutarch will have to serve as our main illustration of it. His Essays reflect in motley guise and disordered array the fruits of extensive reading and a retentive memory in ancient philosophy, science, history, and literature. 
+
+### Question of their authenticity. 
+
+The authenticity of some of the essays attributed to him has been questioned, and very likely with propriety, but for our purpose it is not important that they should all be by the same author so long as they represent approximately the same period and type of literature. The spurious treatise, _De placitis philosophorimi_, we have already considered in the chapter on Galen, to whom it has also been ascribed. The essay _On Rivers and Mountains_ we shall treat by itself in the present chapter. The _De fato_ has also been called spurious. [^202:1] 
+
+  [^202:1]: See R.Schmertosch, in Philol- Hist. Beitr. z. Ehren Wachsmuths, 1897, pp. 28ff. 
+
+Superstitious content is not a sufficient reason for denying that a treatise is by Plutarch, [^202:2] since he is superstitious in writings of undoubted genuineness and since we have found the leading scientists of the time unable to exclude superstition from their works entirely. Moreover, many of the essays are in the form of conversations expressing the divergent views of different speakers, and it is not always possible to tell which shade of opinion Plutarch himself favors. Suffice it that the views expressed are those of men of education. 
+
+ [^202:2]: Language and literary form are surer guides and have been ap- plied by B. Weissenberger, Die Sprache Plutarchs von Ch&auml:dronea und die pseudoplutarchischen Schriften, II Progr. Straubing, 1896, pp. I5ff. In 1876 W. W. Goodwin, editing a revised edition of the seventeenth century English translation of the Morals, declared that no critical translation was possible until a thorough revision of the text had been under- taken with the help of the best MSS. Since then an edition of the text by G. N. Bernadakes, 1888-1896, has appeared, but it has not escaped criticism. 
+
+### Magic in Plutarch.
+
+Plutarch does not specifically discuss magic under that name at any length in any of his essays, but does treat of such subjects as superstition in general, dreams, oracles, demons, number, fate, the craftiness of animals, and other "natural questions." Certain vulgar forms of magic, at least, were regarded by him with disapproval or incredulty. [^203:1] 
+
+ [^203:1]: The English translation of Plutarch’s Morals “by several hands,” first published in 1684-1694, sixth edition corrected and revised by W. W. Goodwin, § vols., 1870- 1878, IV, ο, renders a passage in the seventh chapter of _De defectu oraculorum_, in which complaint is made of the “base and villainous questions” which are now put to the oracle of Apollo, as follows: “some coming to him as a mere paltry astrologer to try his skill and impose upon him with subtle questions.” But the corresponding clause in the Greek οἱ μὲν ὧς σοφιστοῦ διά-πειραν λαμβάνοντες - oi mén ós sofistoú diá-peiran lamvánontes - the one sophist was trying to take, and there seems to be no reason for taking the word “sophist” in any other than its usual meaning. The passage therefore cannot be interpreted as an attack upon even vulgar astrologers.
+
+He rejects as a fiction the statement that the women of Thessaly can draw down the moon by their spells, but thinks that the notion perhaps originated in the fact or story that Aglaonice, daughter of Hegetor, was so skilful in astrology or astronomy as to be able to foresee the occurrence of lunar eclipses, and that she deluded the people into believing that at such times she brought down the moon from heaven by charms and enchantments.  [^203:2]  Thus we have one more instance of the union of magic and science, this time of pseudo-magic with real science as at other times of magic with pseudo-science. 
+
+  [^203:2]: De defectu oraculorum, 13.
+
+### Essay on Superstition
+
+The essay entitled "περὶ δεισιδαιμονίας - superstitious" deals with superstition in the usual Greek sense of dread or excessive  fear of demons and gods. We are accustomed to think of Hellenic paganism as a cheerful faith, full of naturalism, in which the gods were humanized and made familiar. Plutarch apparently regards normal religion as of this sort, and attacks the superstitious dread of the supernatural. He contends that such fear is worse, if anything, than atheism, for it makes men more unhappy and is an equal offense against the divinity, since it is at least as bad to believe ill of the gods as not to believe in them at all. Nothing indeed encourages the growth of atheism so much as the absurd practices and beliefs of such superstitious persons,  
+
+>"their words and motions, their sorceries and magics, their running to and pro and beatings of drums, their impure rites and their purification, their filthiness and chastity-, their barbarian and illegal chastisements and abuse." [^204:1] 
+
+  [^204:1]: Cap. 12.
+
+Plutarch seems to be in part animated by the common prejudice against all other religions than one's own and speaks twice with distaste of Jewish Sabbaths. He also, however, as the passage just quoted shows, is opposed to the more extreme and debasing forms of magic, and declares that the superstitious man becomes a mere peg or post upon which all the old wives hang any amulets and ligatures upon which they may chance. [^204:2] 
+
+  [^204:2]: Cap. 7. 
+
+He further condemns such historic instances of superstition as Xicias's suspension of military operations during a lunar eclipse on the Sicilian expedition. [^204:3]
+
+  [^204:3]: Cap. 8.
+
+There was nothing terrible, says Plutarch, with his usual felicity of antithesis, in the periodic recurrence of the earth's shadow upon the moon; but it was a terrible calamity that the shadow of superstition should thus darken the mind of a general at the very moment when a great crisis required the fullest use of his reason. 
+ 
+### Plutarch hospitable toward some superstitions.
+
+In the essay upon the demon of Socrates one of the speakers, attacking faith in dreams and apparitions, commends Socrates as one who did not reject the worship of the gods but who did purify philosophy, which he had received from Pythagoras and Empedocles full of phantasms and myths and the dread of demons, and reeling like a Bacchanal, and reduced it to facts and reason and truth. [^204:4]
+
+ [^204:4]: Cap. 9.
+
+Another of the company, however, objects that the demon of Socrates outdid the divination of Pythagoras. [^204:5]
+
+ [^204:5]: Cap. 10.
+
+These conflicting opinions may be applied in some measure to Plutarch himself. His censure of dread of demons and excessive superstition is not to be taken as a sign of scepticism on his part in oracles, dreams, or the demons themselves. To these matters we next turn. 
+
+### The oracles of Delphi and of Trophonius. 
+
+Plutarch's faith and interest in oracles in general and in the Delphian oracle ot Apollo in particular are attested by three of his essays, the _De defectu oraculorum, De Pythiae oraculis_ and _De Ei apud Delphos_. At the same time these essays attest the decline of the oracles from their earlier popularity" and greatness. The oracular cave of Trophonius, of which we shall hear again in the _Life of Apollonius of Tyana_, also comes into Plutarch's works, and the prophetic and apocalyptic vision is described of a youth who spent two nights and a day there in an endeavor to learn the nature of the demon of Socrates. [^205:1]
+
+ [^205:1]: De genio Socratis, 21-22.
+ 
+### Divination justified. 
+ 
+Plutarch further had faith in divination in general, Divination whether by dreams, sneezes or other omens: but he attempted to give a dignified philosophical and theological explanation of it. Few men receive direct divine revelation, in his opinion, but to many signs are given on which divination may be based. [^205:2]
+
+ [^205:2]: De genio Socratis, 24.
+
+He held that the human soul had a natural faculty of divination which might be exercised at favorable times and when the bodily state was not unfavorable. [^205:3] 
+
+ [^205:3]: _De defectu oraculorum_, 40.
+ 
+A speaker in one of his dialogues justifies divination even from sneezes and like trivial occurrences upon the ground that as the faint beat of the pulse has meaning for the physician and a small cloud in the sky - is for a skilful pilot a sign of impending storm, so the least thing may be a clue to the truly - prophetic soul.  [^205:4]
+
+ [^205:4]: De genio Socratis, 12
+
+The extent of Plutarch's faith in dreams may be inferred from his discussion of the problem. Why are dreams in autumn the least reliable?  [^205:5] 
+
+ [^205:5]: Sympos. VIII, 10
+
+First there is Aristotle's suggestion that eating autumn fruit so disturbs the digestion that the soul is left little opportunity to exercise its prophetic faculty undistracted. If we accept the doctrine of Democritus that dreams are caused by images from other bodies and even minds or souls, which enter the body of the sleeper through the open pores and affect the mind, revealing to it the present passions and future designs of others, - if we accept this theory, it may be that the falling leaves in autumn disturb the air and ruffle these extremely thin and film-like emanations. A third explanation offered is that in the declining months of the year all our faculties, including that of natural divination, are in a state of decline. In the case of oracles like that at Delphi it is suggested that the Pythia's natural faculty of divination is stimulated by "the prophetical exhalations from the earth" which induce a bodily state favorable to divination. [^206:1] 
+
+ [^206:1]: _De defectu oraculorum_, 44.
+
+The god or demon, however, is the underlying and directing cause of the oracle.  [^206:2]
+
+ [^206:2]: _De defectu oraculorum_, 48.
+ 
+### Demons as mediators between gods and men
+
+To the demons and their relations to the gods and to men we therefore next come. Plutarch's view is that they are essential mediators between the gods and men. Just as one who should remove the air from between the earth and moon would destroy the continuity of the universe, so those who deny that there is a race of demons break ofif all inter- course between gods and men. [^206:3] 
+
+ [^206:3]: _De defectu oraculorum_, 13.
+
 On the other hand, the theory of demons solves many doubts and difficulties. [^206:4]
 
  [^206:4]: _De defectu oraculorum_, 10.
@@ -893,3 +1010,4 @@ Yet in the same essay [^219:6] Plutarch has scoffed at the idea of a spherical e
  [^219:6]: Cap. 7.
 
 He admits, however, that the philosophers think so. Thus we see that Christian fathers like Lactantius were not the first to ridicule the notion of the Antipodes; apparently as well educated and omnivorous a pagan reader as Plutarch could do the same.
+
