--- a/Slak/15.md
+++ b/Slak/15.md
@@ -6,7 +6,7 @@
 
 ### Difficulty in defining Gnosticism.
 
-Gnosticism [^360:1] is not easy to define and the term Gnostic appears to have been applied to a great variety of sects with a confusing diversity of beHefs, Many of the constituents and roots at least of Gnosticism were older than Christianity, and it is now the custom to associate the Gnosis or superior knowledge and revelation, which gives the movement its name, not with Greek philosophy or mysteries but with oriental speculation and religions. 
+Gnosticism [^360:1] is not easy to define and the term Gnostic appears to have been applied to a great variety of sects with a confusing diversity of beliefs, Many of the constituents and roots at least of Gnosticism were older than Christianity, and it is now the custom to associate the Gnosis or superior knowledge and revelation, which gives the movement its name, not with Greek philosophy or mysteries but with oriental speculation and religions. 
 
  [^360:1]: A good account of the Gnostic sources and bibliography of secondary works on Gnosticism will be found in CE, "_Gnosticism_" (1909) by J. P. Arendzen. 
 
