--- a/Slak/SubjectIndex.mkd
+++ b/Slak/SubjectIndex.mkd
@@ -1210,23 +1210,23 @@ Slak/20_varia.md
 
 [PREFACE]: ./00.md#preface
 
-[Abbreviations.]:./00.md#abbreviations
+[Abbreviations.]: ./00.md#abbreviations
 
-[Designation of manuscripts.]:(./00.md#designation-of-manuscripts)
+[Designation of manuscripts.]: ./00.md#designation-of-manuscripts
 
-[List of works frequently cited.]:(./00.md#list-of-works-frequently-cited)
+[List of works frequently cited.]: ./00.md#list-of-works-frequently-cited
 
-[By author and date of publication or brief title.]:(./00.md#by-author-and-date-of-publication-or-brief-title)
+[By author and date of publication or brief title.]: ./00.md#by-author-and-date-of-publication-or-brief-title
 
 [Chapter I]:(./01.md#chapter-i)
 
-[INTRODUCTION]:(./01.md#introduction)
+[INTRODUCTION]: ./01.md#introduction
  
- [Aim of this book.]:(./01.md#aim-of-this-book)
+ [Aim of this book.]: ./01.md#aim-of-this-book
 
- [Period covered.]:(./01.md#period-covered)
+ [Period covered.]: ./01.md#period-covered
  
- [How to study the history of thought.]:(./01.md#how-to-study-the-history-of-thought)
+ [How to study the history of thought.]: ./01.md#how-to-study-the-history-of-thought
  
  [Definition of magic.]:(./01.md#definition-of-magic)
  
